# magmaan

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  h-polychorics.tex  justfile  notes.md
benchmarks/: .gitignore  CMakeLists.txt  README.md  cases.yml  fiml_objective_bench.cpp  malloc_peak.cpp  malloc_peak.hpp  mem_profile.cpp  mixed_ordinal_construction_bench.cpp  ordinal_construction_bench.cpp  ordinal_inference_workspace_bench.cpp  ordinal_observed_construction_bench.cpp  ordinal_snlls_speed_bench.cpp  ordinal_threshold_constraint_bench.cpp  ordinal_workspace_bench.cpp
benchmarks/cases/bfi_5factor/: model.lav  reference_lavaan.json  source.yml
benchmarks/cases/bollen_democracy_sem/: model.lav  reference_lavaan.json  source.yml
benchmarks/cases/demo_growth_linear/: model.lav  reference_lavaan.json  source.yml
benchmarks/cases/hs_3factor_cfa/: reference_lavaan.json  source.yml
benchmarks/cases/hs_3factor_cfa_fiml_masked/: reference_lavaan.json  source.yml
benchmarks/cases/hs_3factor_cfa_gls/: reference_lavaan.json  source.yml
benchmarks/cases/hs_3factor_cfa_uls/: reference_lavaan.json  source.yml
benchmarks/cases/mplus_ex5_1/: model.lav  reference_lavaan.json  source.yml
benchmarks/cases/openmx_mimic/: model.lav  source.yml
benchmarks/cases/stata_correlated_uniqueness/: model.lav  source.yml
benchmarks/cases/stata_growth/: model.lav  source.yml
benchmarks/cases/stata_higher_order/: model.lav  source.yml
benchmarks/r/: bench_mi_lrt.R  cases.R  check_sources.R  common.R  fetch_data.R  fixture_json.R  make_lavaan_reference.R  prepare_case.R  run_benchmark.R
tests/: CMakeLists.txt  inference_bundle.hpp  oracle.hpp  test_fit.hpp
tests/checks/dls/: dls_eb_sanity.cpp  justfile
tests/checks/fiml_fmg_nested/: README.md  fiml_nested_nominal.R  justfile
tests/checks/fiml_fmg_trace/: README.md  fiml_fmg_trace_convergence.R  justfile
tests/checks/fiml_h1_edge/: README.md  fiml_h1_edge.R  justfile
tests/checks/ig/: pearson_draw_bench.R
tests/checks/ordinal_cfi_inference/: README.md  justfile  ordinal_cfi_verify.cpp
tests/checks/ordinal_crmr_inference/: README.md  justfile  ordinal_crmr_verify.cpp
tests/checks/ordinal_dwls_profile/: README.md  justfile  ordinal_dwls_profile_verify.cpp
tests/checks/ordinal_rmsea_inference/: README.md  justfile  ordinal_rmsea_verify.cpp
tests/checks/plsim/: README.md  justfile  plsim_calibration_bench.cpp  plsim_vs_covsim.R
tests/checks/residual_estimated_weight/: README.md  justfile  residual_ew_verify.cpp
tests/checks/robust_polychoric/: justfile  robust_polychoric_sanity.cpp
tests/checks/robust_score/: README.md  justfile  robust_score_sanity.cpp
tests/fixtures/: DATASETS.md  corpus.json  distribution_math.json  lavaan_version.txt
tests/fixtures/case_influence/: cfa_hs.json  path_pa.json
tests/fixtures/composite/: 0001_pure_composite_hs.fit.json  0002_composite_factor_hs.fit.json  0003_composite_structural_hs.fit.json
tests/fixtures/fiml/: 0001_one_factor_hs_fiml.fit.json  0002_three_factor_hs_fiml.fit.json  0003_equal_loading_hs_fiml.fit.json  0004_multigroup_1f_school_fiml.fit.json  0005_multigroup_3f_school_fiml.fit.json  0006_multigroup_equal_loading_school_fiml.fit.json  0007_structural_hs_fiml.fit.json  0008_structural_fixedx_false_hs_fiml.fit.json  0009_path_fixed_x_missing_hs_fiml.fit.json  0010_three_factor_dense_patterns_hs_fiml.fit.json  0011_path_fixedx_false_missing_x_y_fiml.fit.json  0012_path_fixedx_true_complete_x_missing_y_fiml.fit.json  0013_structural_equal_regression_hs_fiml.fit.json  0014_multigroup_dense_school_specific_fiml.fit.json  0015_structural_highdim_hs_fiml.fit.json  (+2 more)
tests/golden/: composite_golden_test.cpp  fiml_golden_test.cpp  fit_implied_golden_test.cpp  fit_measures_golden_test.cpp  fit_theta_golden_test.cpp  fmg_pvalue_golden_test.cpp  geiser_golden_test.cpp  inference_golden_test.cpp  lavaan_parity_golden_test.cpp  lavaanify_golden_test.cpp  lexer_golden_test.cpp  lin_constraint_golden_test.cpp  ls_golden_test.cpp  matrix_rep_golden_test.cpp  mplus_sem_golden_test.cpp  multigroup_inference_golden_test.cpp  observed_inference_golden_test.cpp  ordinal_golden_test.cpp  pairwise_golden_test.cpp  paper_corpus_golden_test.cpp  parser_golden_test.cpp  robcat_parity_golden_test.cpp  score_golden_test.cpp  score_robust_golden_test.cpp  standardized_golden_test.cpp  std_lv_golden_test.cpp  test_stats_golden_test.cpp  textbook_corpus_golden_test.cpp  twolevel_golden_test.cpp
tests/tools/: build_little_corpus.R  build_mplus_sem_corpus.R  build_newsom_corpus.R  check_layering.sh  regen_copula_sim_fixtures.R  regen_distribution_math_fixtures.R  regen_geiser_fixtures.R  regen_johnson_sim_fixtures.R  regen_little_newsom_fixtures.R  regen_mplus_sem_fixtures.R  regen_oracle.R  regen_oracle_twolevel.R  regen_oracle_twolevel_mplus.R  regen_paper_corpus_fixtures.R  regen_parity_fixtures.R  regen_pearson_sim_fixtures.R  regen_robcat_fixtures.R  regen_robust_score.R  regen_semfindr_fixtures.R  regen_textbook_case_fixtures.R  regen_textbook_corpus_manifest.R  regen_textbook_corpus_overlap.R  scout_paper_corpus.R
tests/unit/: api_sem_test.cpp  auto_identification_test.cpp  bounds_test.cpp  ceres_integration_test.cpp  ceres_optimizer_test.cpp  cluster_stats_test.cpp  composite_expand_test.cpp  composite_fold_test.cpp  composite_weights_test.cpp  concepts_test.cpp  constraints_test.cpp  convergence_diagnostics_test.cpp  detail_linalg_test.cpp  distribution_math_test.cpp  dls_weight_test.cpp  effects_test.cpp  elliptical_test.cpp  evaluate_at_test.cpp  factor_scores_test.cpp  fcsem_evaluator_test.cpp  fcsem_ml_test.cpp  fiml_test.cpp  fit_diagnostics_test.cpp  fit_measures_test.cpp  fmg_test.cpp  gls_wls_test.cpp  inference_test.cpp  ipopt_optimizer_test.cpp  lavaanify_test.cpp  lbfgs_optimizer_test.cpp  lbfgsb_integration_test.cpp  lbfgsb_optimizer_test.cpp  lexer_test.cpp  lin_constraints_test.cpp  ls_path_test.cpp  matrix_rep_test.cpp  ml_continuation_test.cpp  ml_irls_test.cpp  ml_test.cpp  model_evaluator_test.cpp  (+43 more)
(+1270 files in other folders)
